<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.victor.test.alcampokotlin.ui.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_stores_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stores"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/layout_no_stores"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_position_requested"
                android:textSize="16sp"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_grant_location_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/start"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lst_stores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
    </LinearLayout>
</layout>
