<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.victor.test.alcampokotlin.ui.MainActivity">

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_list"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txt_store_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="@string/app_name"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_store_list"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="16sp"
                    android:layout_marginRight="16sp"
                    android:src="@drawable/ic_store_black_24dp"
                    android:padding="5dp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_no_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tap_on_plus_button"
                    android:visibility="visible"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lst_shopping_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_new_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_black_24dp"
            app:fabSize="normal"/>
    </FrameLayout>
</layout>
